[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-link"
version = "0.1.1"
description = "The MCP Server Package Manager — install MCP servers in one command for Claude, Cursor & Windsurf"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "sametdlkrn"}]
keywords = ["mcp", "claude", "cursor", "windsurf", "model-context-protocol", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
mcpx = "mcpx.cli:main"

[project.urls]
Homepage = "https://github.com/sametdlkrn/mcpx"
Repository = "https://github.com/sametdlkrn/mcpx"
Issues = "https://github.com/sametdlkrn/mcpx/issues"

[tool.hatch.build.targets.wheel]
packages = ["mcpx"]
